--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <li>
                     <a href="input4.html">購入価格と希望する増分をパーセンテージで入力すると約定するべき価格を表示()</a>
                 </li>
+                <li>
+                    <a href="input5_ig.html">IGで使うといいかも()</a>
+                </li>                
             </ul>
             <!---<images>
                 <img src="sunrisefirst.png">
