--- a/input1.html
+++ b/input1.html
@@ -17,10 +17,10 @@
             <inputXAndY>
                 <form id="id_form_XAndY" name="name_form_XAndY">
                     <label for="id_XAndYinput_X">Input original value:</label>
-                    <input id="id_XAndYinput_X" name="name_input_X" type="text" required/>
+                    <input id="id_XAndYinput_X" name="name_input_X" type="number" required/>
                     <br>
                     <label for="id_XAndY_input_Y">Input current value:</label>
-                    <input id="id_XAndY_input_Y" name="name_input_Y" type="text" required/>
+                    <input id="id_XAndY_input_Y" name="name_input_Y" type="number" required/>
                     <br>
                     <button id="id_XAndY_button_calculate" type="button">Calculate!!</button>
                     <p id="id_XAndY_P_Result">*****</p>
