--- a/input3.html
+++ b/input3.html
@@ -14,10 +14,10 @@
             <inputXAndY>
                 <form id="id_form_inputXAndY" name="name_form_inputXAndY">
                     <label for="id_XAndYinput_X">Input a stock price:</label>
-                    <input id="id_XAndYinput_X" name="name_input_X" type="text" required/>
+                    <input id="id_XAndYinput_X" name="name_input_X" type="number" required/>
                     <br>
                     <label for="id_XAndY_input_Y">Input earning of a stock:</label>
-                    <input id="id_XAndY_input_Y" name="name_input_Y" type="text" required/>
+                    <input id="id_XAndY_input_Y" name="name_input_Y" type="number" required/>
                     <br>
                     <button id="id_XAndY_button_calculate" type="button">Get rate of earning!!</button>
                     <p id="id_XAndY_P_Result">*****</p>
