--- a/input5_ig.html
+++ b/input5_ig.html
@@ -4,7 +4,7 @@
     <head>
         <title>Financial Calculator</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/index_ig.css">
     </head>
     <body>
         <header>
