--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
                 <li>
                     <a href="input5_ig.html">IGで使うといいかも()</a>
                 </li>                
+                <li>
+                    <a href="input6_ig.html">IGで使うともっといいかも()</a>
+                </li>                
             </ul>
-            <!---<images>
+
+        </ul>
+            <images>
                 <img src="sunrisefirst.png">
-            </images>--->
+            </images>
         </main>
         <footer>
 
