--- a/input6_ig .html
+++ b/input6_ig .html
@@ -53,6 +53,7 @@
         </main>
         <footer>
             <a href="index.html">return to main</a>
+            <a href="http://nodejs.koremade.net/index.html">nodejs</a>
         </footer>
 
         <!---define script file-->
